--- a/thesis.tex
+++ b/thesis.tex
@@ -60,12 +60,10 @@
 \usepackage{microtype}
 \usepackage[super]{nth} % converts Dec \nth{1} to Dec 1st (with st as superscript)
 
-
 %%%%%%%%%%%%%%%%%%%
 %Literaturverzeichnis
 %%%%%%%%%%%%%%%%%%%
-\usepackage[style=authoryear-ibid,backend=biber]{biblatex}   % Literaturverzeichnis
-\DeclareLanguageMapping{english}{english-apa}
+\usepackage[style=apa,backend=biber]{biblatex}    % Literaturverzeichnis
 \bibliography{references}
 \AtBeginBibliography{\setcounter{maxnames}{10}} % Im Literaturverzeichnis nenne mehr als 2 Autoren
 \counterwithout{footnote}{chapter} % Zähle Fußnoten über gesamtes Dokument hoch
@@ -203,7 +201,7 @@ ChatGPT reached 1 million users within 5 days after its launch in 2022 which was
 
 However, the success of enterprise RAG applications typically requires some effort, including the use of specialized RAG pipelines or connecting various APIs to the RAG system, to implement them effectively \parencite[p.~6--7]{Bruckhaus2024RAG}. Common failure points include the system failing to provide an answer even though the information is available, generating a false answer by misinterpreting context or returning an incomplete response \parencite[p.~4]{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}. As organizations invest in and deploy these powerful but complex systems, a critical management challenge arises: How can the success of a GenAI application be measured and monitored over time? Without systematic evaluation, system administrators lack the data-driven insights needed to identify weaknesses, justify improvements, and ensure that the system delivers a positive return on investment.
 
-This thesis addresses this management challenge directly. It documents the design, development, and evaluation of an analytics dashboard designed to measure the success of an enterprise GenAI application automatically. Following the Information Systems Success Model \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}, success can be measured using three quality metrics: \textit{information quality}, \textit{system quality}, and \textit{service quality}. However, most RAG evaluation frameworks like RAGAS \parencite{Es_James_Espinosa_Anke_Schockaert_2024} or ARES \parencite{Saad_Falcon_Khattab_Potts_Zaharia_2024} only include the information quality provided by the system. To move beyond this narrow perspective on IS success, this study employs a Design Science Research methodology following \cite{Peffers01122007} to conceptualize and implement a dashboard based on a more holistic perspective.
+This thesis addresses this management challenge directly. It documents the design, development, and evaluation of an analytics dashboard designed to measure the success of an enterprise GenAI application automatically. Following the Information Systems Success Model \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}, success can be measured using three quality metrics: \textit{information quality}, \textit{system quality}, and \textit{service quality}. However, most RAG evaluation frameworks like RAGAS \parencite{Es_James_Espinosa_Anke_Schockaert_2024} or ARES \parencite{Saad_Falcon_Khattab_Potts_Zaharia_2024} only include the information quality provided by the system. To move beyond this narrow perspective on IS success, this study employs a Design Science Research methodology following \cite{} to conceptualize and implement a dashboard based on a more holistic perspective.
 % --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  -- %
 % --  --  --  --  --  --  --  --  --  --  Theoretical Background  --  --  --  --  -- %
 % --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  -- %
@@ -269,7 +267,7 @@ Since RAG systems can query various data sources at once, they provide good link
 However, realizing the full potential of RAG systems in an enterprise context requires significant effort. Enterprises typically have high requirements concerning not only the output quality but also compliance regulations, the integration of various data sources, and other factors. In the following analysis, we will examine some of the issues encountered in RAG systems used in enterprises and assign them to the quality dimensions of the ISSM. \\
 A formal taxonomy of failure points for a RAG system, created based on three case studies, highlights seven distinct issue types related to \textit{Information quality} \parencite{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}. These challenges range from fundamental data gaps, where the required information is simply missing from the knowledge base, to retrieval failures where required documents are not ranked highly enough by the retrieval algorithm or are lost during context consolidation. Further down the pipeline, the Large Language Model (LLM) might fail to extract the correct answer from the provided context. Finally, even if factually correct, the generated answer may have the wrong format, an incorrect level of specificity, or be incomplete, failing to fully satisfy the user's query \parencite{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}.\\
 Three other case studies demonstrate these theoretical \textit{Information quality} related issues in the real world too. In a 2023 case study, a RAG system implemented in a major healthcare organization began to produce a series of potentially harmful treatment suggestions that contradicted current medical standards. This occurred because its knowledge base contained outdated medical guidelines, inconsistent drug interaction databases, and incomplete patient history records \parencite{NStarX_Inc._2025}. This case highlighted the direct risks to patient safety. In another example, an investment firm's RAG system provided contradictory advice on securities regulations, potentially leading to compliance violations. An investigation found the knowledge base contained regulatory documents from multiple jurisdictions without proper geographic tagging, superseded regulations that had not been archived, and inconsistent interpretations of the same rule. The firm faced potential regulatory scrutiny and was forced to suspend the system, resulting in millions of dollars in lost productivity and increased manual oversight \parencite{NStarX_Inc._2025}. Similarly, a telecommunications chatbot began providing customers with incorrect billing information and outdated service plans. The root cause was traced to duplicate customer records, outdated product catalogs with discontinued services, and inconsistent pricing data across regional databases. \parencite{NStarX_Inc._2025}\\
-Another study highlights five key challenges that RAG systems face, especially in compliance-regulated enterprise environments \parencite{Tilmann}.\\
+Another study highlights five key challenges that RAG systems face, especially in compliance-regulated enterprise environments \parencite{Bruckhaus2024RAG}.\\
 The first of these is maintaining accuracy, consistency, and explainability. Given that RAG outputs in sectors such as finance or healthcare can carry legal or financial weight, they require a higher level of trustworthiness and accuracy. Furthermore, the systems must be able to explain how retrieved documents influence the final generated content and provide confidence scores to help users assess the reliability of the output.\\
 Secondly, data security, privacy, and compliance are critical. Enterprises must ensure their RAG systems comply with strict regulations, such as HIPAA or GDPR, which require robust data encryption, access controls, and detailed audit trails to prevent the unauthorized disclosure of sensitive information.\\
 A third significant \textit{system quality}-related challenge is the \textbf{scalability and performance} of the RAG application. Enterprise knowledge bases are typically vast and complex, spanning numerous formats and systems. RAG architectures must be able to efficiently index, update, and search these massive data sources while maintaining high performance and low latency.\\
